@@ -522,6 +522,9 @@ if ($action=="update") {
 
 		if (!$errors) {
 			// create/modify an htaccess file in the main media directory
+			$mediafirewall_path = dirname($SCRIPT_NAME)."/mediafirewall.php";
+			$mediafirewall_path = str_replace('//', '/', $mediafirewall_path); // remove duplicate slashes if PGV being run from root directory
+			
 			$httext = "";
 			if (file_exists($MEDIA_DIRECTORY.".htaccess")) {
 				$httext = implode('', file($MEDIA_DIRECTORY.".htaccess"));
@@ -539,9 +542,9 @@ if ($action=="update") {
 			$httext .= "\n\tRewriteEngine On";
 			$httext .= "\n\tRewriteCond %{REQUEST_FILENAME} !-f";
 			$httext .= "\n\tRewriteCond %{REQUEST_FILENAME} !-d";
-			$httext .= "\n\tRewriteRule .* ".dirname($SCRIPT_NAME)."/mediafirewall.php [L]";
+			$httext .= "\n\tRewriteRule .* ".$mediafirewall_path." [L]";
 			$httext .= "\n</IfModule>";
-			$httext .= "\nErrorDocument\t404\t".dirname($SCRIPT_NAME)."/mediafirewall.php";
+			$httext .= "\nErrorDocument\t404\t".$mediafirewall_path;
 			$httext .= "\n########## END PGV MEDIA FIREWALL SECTION ##########";
 
 			$fp = @fopen($MEDIA_DIRECTORY.".htaccess", "wb");
